--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,24 +13,29 @@
     color: rgba(39, 39, 39, 0.6);
 }
 
+.font-secondary {
+    font-size: 40px;
+    font-weight: 800;
+    color: #272727;
+}
+
 .btn-primary {
     background-color: #E55473;
     padding: 20px 40px;
     color: #FFFFFF;
     border-radius: 8px;
     border: none;
-
+    cursor: pointer;
 }
 
 
 
 /* header styles  */
 header {
-    max-width: 100%;
+    max-width: 1920px;
     height: 100%;
     margin: 0 auto;
     background-color: rgba(229, 84, 115, 0.1);
-
 }
 
 /* banner styles  */
@@ -49,6 +54,78 @@ header {
     color: rgba(39, 39, 39, 1);
 }
 
+/* featured styles  */
+.featured {
+    max-width: 1440px;
+    margin: 0 auto;
+    margin-bottom: 128px;
+}
+
+.featured-text {
+    margin-top: 170px;
+    text-align: center;
+}
+
+.f-title {
+    margin-bottom: 24px;
+}
+
+.featured-img-container {
+    display: flex;
+    gap: 24px;
+}
+
+.featured-img {
+    width: 470px;
+    margin-top: 50px;
+
+}
+
+.s-f-img-p {
+    width: 464px;
+    height: 538px;
+    background-color: rgba(167, 33, 98, 0.15);
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+.s-f-img-r {
+    width: 464px;
+    height: 538px;
+    background-color: rgba(5, 151, 160, 0.15);
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+.s-f-img-y {
+    width: 464px;
+    height: 538px;
+    background-color: rgba(71, 125, 17, 0.15);
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+.f-img {
+    width: 310px;
+    height: 428px;
+    padding: 100px 80px 0px 80px;
+}
+
+.featured-img .f-img-title {
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+    cursor: pointer;
+}
 
 
 
@@ -66,12 +143,43 @@ header {
 @media screen and (max-width:576px) {
     .banner {
         flex-direction: column;
-        width: calc(100% - 20px);
+        /* width: calc(100% - 20px); */
         padding: 10px;
     }
 
     .banner-image img {
         width: 100%;
     }
+
+    /* Banner responsive done  */
+    .featured-img-container {
+        flex-direction: column;
+
+    }
+
+    .featured-img {
+        width: 100%;
+    }
+
+    .s-f-img-y,
+    .s-f-img-r,
+    .s-f-img-p {
+        width: calc(100% - 20px);
+        margin: 10px;
+    }
+
+    .f-img {
+        width: calc(100% - 20px);
+        margin-right: 30px;
+        margin-left: 30px;
+        padding: 20px;
+
+    }
+
+    .featured-text {
+        width: calc(100% - 20px);
+        margin: auto;
+    }
+
 
 }
