--- a/styles/styles.css
+++ b/styles/styles.css
@@ -144,14 +144,32 @@ header {
     justify-content: center;
     padding: 86px 175px;
     gap: 150px;
-
-
 }
 
 .support-column {
     text-align: center;
 }
 
+/* sale section starts  */
+
+.sale{
+    max-width: 1920px;
+    height: 620px;
+    margin: 0 auto;
+    background-color: rgba(229, 84, 115, 0.05);
+    margin-bottom: 130px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 180px;
+}
+
+#red{
+    color: #E55473;
+}
+.sale-text{
+    text-align: center;
+}
 
 
 
@@ -175,7 +193,8 @@ header {
 
     /* Banner responsive done  */
     .featured-img-container,
-    .support-container {
+    .support-container, 
+    .sale {
         flex-direction: column;
 
     }
@@ -207,6 +226,9 @@ header {
     .support-container {
         padding: 20px;
         gap: 100px;
+    }
+    .sale{
+        height: auto;
     }
 
 
